--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,12 +4,12 @@
     <title>Log in</title>
 </head>
 <body>
-    <div th:insert="fragments.html::nav"></div>
+    <!--<div th:insert="fragments.html::nav"></div>-->
     <div class="container">
-        <div style="width:600px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
+        <div style="width:400px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
             <div class="card">
                 <div class="card-header">
-                    <i class="fa fa-user"></i> Please Login
+                    <!--<i class="fa fa-user"></i>--> Login
                 </div>
                 <div class="card-block" style="padding: 24px;">
                     <form name="f" th:action="@{/login}" method="post">
@@ -25,20 +25,30 @@
 
                             <!-- Login Controls -->
                             <div class="form-group">
-                                <label for="txtUsername">Username</label>
-                                <input type="text" class="form-control" id="txtUsername" name="txtUsername"
-                                       placeholder="Username">
+                                <div class="input-group">
+                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user" aria-hidden="true"></i></span>
+                                     <input type="text" class="form-control" id="username" name="username"
+                                       placeholder="Username" aria-describedby="basic-addon1">
+                                </div>
+                               <!-- <label for="username">Username</label>-->
+                               <!--<input type="text" class="form-control" id="username" name="username"
+                                       placeholder="Username">-->
                             </div>
 
                             <div class="form-group">
-                                <label for="txtPassword">Password</label>
-                                <input type="password" class="form-control" id="txtPassword" name="txtPassword"
-                                       placeholder="Password">
+                                <div class="input-group">
+                                    <span class="input-group-addon" id="basic-addon2"><i class="fa fa-key" aria-hidden="true"></i></span>
+                                    <input type="password" class="form-control" id="password" name="password"
+                                           placeholder="Password" aria-describedby="basic-addon2" >
+                                </div>
+                                <!--<label for="password">Password</label>-->
+                                <!--<input type="password" class="form-control" id="password" name="password"
+                                       placeholder="Password">-->
                             </div>
 
                             <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="checkRememberMe" name="checkRememberMe">
-                                <label class="form-check-label" for="checkRememberMe">Remember me?</label>
+                                <input type="checkbox" class="form-check-input" id="remenber-me" name="remenber-me">
+                                <label class="form-check-label" for="remenber-me">Remember me?</label>
                             </div>
 
                             <!-- Login Button -->
