--- a/src/main/resources/templates/createProduct.html
+++ b/src/main/resources/templates/createProduct.html
@@ -12,9 +12,13 @@
         <p> </p>
 
     </div>
+    <div th:if="${created}" class="alert alert-success" role="alert">
+        <h4 class="alert-heading">Succesfull created Product done!</h4>
+        <p th:text="${product.toString()}"></p>
+    </div>
 
     <div class=" card card-block"  style="width:600px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
-        <form action="#" th:action="@{/products/create}" th:object="${product}"  method="post">
+        <form action="#" th:action="@{/products/create}" th:object="${product}"  enctype="multipart/form-data" method="post">
             <fieldset>
                 <legend>Create Product</legend>
                 <div class="card">
@@ -60,11 +64,12 @@
                         <input type="text" id="sellingPrice" placeholder="selling Price" th:field = "*{sellingPrice}"/>
                     </p>
                     <p  class="form-group">
-                        <div class="alert alert-danger" th:if="${#fields.hasErrors('image')}" th:errors="*{image}">
+                        <div class="alert alert-danger" th:if="${#fields.hasErrors('multipartFile')}" th:errors="*{multipartFile}">
 
                         </div>
-                        <label for="image">Image</label> <br>
-                        <input type="file" id="image" required th:field = "*{image}">
+                        <label >Image</label>
+                        <img  th:src="*{{multipartFile}}" alt="..." class="img-thumbnail"><br>
+                        <input type="file" name="file" required th:field = "*{multipartFile}">
                     </p>
                 </div>
 
