--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -4,95 +4,15 @@
     <title>Title</title>
 </head>
 <body>
-<div th:insert="fragments.html::nav"></div>
-<div>
-    <table class="table table-striped table-bordered table-hover">
-        <thead class="thead-dark" align="center">
-        <tr>
-            <th scope="col">Code</th>
-            <th scope="col">Nom</th>
-            <th scope="col">Supplier Name</th>
-            <th scope="col">Supplier Url</th>
-            <th scope="col">Buying price</th>
-            <th scope="col">Selling price</th>
-            <th scope="col">Image</th>
-        </tr>
-        </thead>
-        <tbody align="center">
-        <tr th:if="!${products.iterator().hasNext()}">
-            <td colspan="2"> No Products Available </td>
-        </tr>
-        <tr th:each="product, itemStat : ${products}">
-            <td><span th:text="*{product.code}"></span></td>
-            <td><span th:text="*{product.name}" ></span></td>
-            <td><span th:text="*{product.supplierName}" ></span></td>
-            <td><span th:text="*{product.supplierUrl }" ></span></td>
-            <td><span th:text="*{product.buyingPrice}" ></span></td>
-            <td><span th:text="*{product.sellingPrice}" ></span></td>
-            <td>
-                <img class="img-thumbnail" th:src="@{/products/imageDisplay(id=${product.id})}" th:width="40" th:height="40"/>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div th:if="!${products.isEmpty()}">
-   <!-- <table class="table" width="500" border="0" cellpadding="5">
+<div th:insert="fragments.html :: nav"></div>
 
-        <tr th:if="!${products.iterator().hasNext()}">
-            <td colspan="2"> No Products Available </td>
-        </tr>
-        <tr>
-            <td th:each="prod: ${products}" align="center" valign="center">
-                <img src="listProducts.html" th:src="@{/products/imageDisplay(id=${prod.id})}" th:alt="*{prod.name}" th:width="200" th:height="200" />
-                <br />
-                <p>
-                    <span th:text="*{prod.buyingPrice}"></span>
-                    | <span th:text="*{prod.sellingPrice}"></span>
-                    | <span th:text="*{prod.name}"></span>
-                </p>
-            </td>
-        </tr>
-    </table> -->
-    <div class="row" th:each="index: ${#numbers.sequence(0, products.size(), 4)}">
-        <div class="col-sm-4" th:if="${products.size()> index}">
-            <img src="listProducts.html" th:src="@{/products/imageDisplay(id=${products.get(index).id})}" th:alt="*{products.get(index).name}" th:width="200" th:height="200" />
-            <br />
-            <p>
-                <span th:text="*{products.get(index).buyingPrice}"></span>
-                | <span th:text="*{products.get(index).sellingPrice}"></span>
-                | <span th:text="*{products.get(index).name}"></span>
-            </p>
-        </div>
-        <div class="col-sm-4"  th:if="${products.size()> index + 1}">
-            <img src="listProducts.html" th:src="@{/products/imageDisplay(id=${products.get(index+ 1).id})}" th:alt="*{products.get(index + 1).name}" th:width="200" th:height="200" />
-            <br />
-            <p>
-                <span th:text="*{products.get(index + 1).buyingPrice}"></span>
-                | <span th:text="*{products.get(index + 1).sellingPrice}"></span>
-                | <span th:text="*{products.get(index + 1).name}"></span>
-            </p>
-        </div>
-        <div class="col-sm-4"  th:if="${products.size()> index + 2}">
-            <img src="listProducts.html" th:src="@{/products/imageDisplay(id=${products.get(index+ 1).id})}" th:alt="*{products.get(index + 2).name}" th:width="200" th:height="200" />
-            <br />
-            <p>
-                <span th:text="*{products.get(index + 2).buyingPrice}"></span>
-                | <span th:text="*{products.get(index + 2).sellingPrice}"></span>
-                | <span th:text="*{products.get(index + 2).name}"></span>
-            </p>
-        </div>
-        <div class="col-sm-4"  th:if="${products.size()> index + 3}">
-            <img src="listProducts.html" th:src="@{/products/imageDisplay(id=${products.get(index + 1).id})}" th:alt="*{products.get(index + 3).name}" th:width="200" th:height="200" />
-            <br />
-            <p>
-                <span th:text="*{products.get(index + 3).buyingPrice}"></span>
-                | <span th:text="*{products.get(index + 3).sellingPrice}"></span>
-                | <span th:text="*{products.get(index + 3).name}"></span>
-            </p>
-        </div>
-    </div>
+<div class="btn-group my-2  my-lg-0" role="group" aria-label="View Type" align="right">
+    <a type="button" role="button" class="btn btn-secondary my-2 my-sm-0"  th:href="@{/products(view=list)}"><i class="fas fa-bars"></i></a>
+    <a type="button" role="button" class="btn btn-secondary my-2 my-sm-0"  th:href="@{/products(view=images)}"><i class="far fa-images"></i></a>
+
 </div>
+<div th:insert="fragments.html::display(${viewType})"></div>
+
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
