--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <title>Log in</title>
 </head>
 <body>
-    <!--<div th:insert="fragments.html::nav"></div>-->
+    <div th:insert="fragments.html::nav"></div>
     <div class="container">
         <div style="width:400px;margin-left: auto;margin-right: auto;margin-top:24px;padding: 24px;">
             <div class="card">
@@ -17,10 +17,6 @@
                             <!-- Thymeleaf + Spring Security error display -->
                             <div th:if="${param.error}" class="alert alert-danger">
                                 Invalid username and password.
-                            </div>
-
-                            <div th:if="${param.logout}" class="alert alert-success">
-                                You have been logged out.
                             </div>
 
                             <!-- Login Controls -->
