--- a/src/main/resources/templates/createProduct.html
+++ b/src/main/resources/templates/createProduct.html
@@ -72,8 +72,9 @@
 
                         </div>
                         <label >Image</label>
-                        <img  th:src="*{{multipartFile}}" alt="..." class="img-thumbnail"><br>
-                        <input type="file" name="file" required th:field = "*{multipartFile}">
+                        <img  id="preview" alt="..." class="img-thumbnail" width="100" height="100"><br>
+                        <input type="file" name="file" required th:field = "*{multipartFile}"
+                               onchange="document.getElementById('preview').src = window.URL.createObjectURL(this.files[0])">
                     </p>
                 </div>
 
