--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,25 +21,23 @@
 
                             <!-- Login Controls -->
                             <div class="form-group">
-                                <div class="input-group">
-                                     <span class="input-group-addon" id="basic-addon1"><i class="fa fa-user" aria-hidden="true"></i></span>
-                                     <input type="text" class="form-control" id="username" name="username"
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                    </div>
+                                    <input type="text" class="form-control" id="username" name="username"
                                        placeholder="Username" aria-describedby="basic-addon1">
                                 </div>
-                               <!-- <label for="username">Username</label>-->
-                               <!--<input type="text" class="form-control" id="username" name="username"
-                                       placeholder="Username">-->
                             </div>
 
                             <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon" id="basic-addon2"><i class="fa fa-key" aria-hidden="true"></i></span>
+                                <div class="input-group form-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                    </div>
                                     <input type="password" class="form-control" id="password" name="password"
                                            placeholder="Password" aria-describedby="basic-addon2" >
                                 </div>
-                                <!--<label for="password">Password</label>-->
-                                <!--<input type="password" class="form-control" id="password" name="password"
-                                       placeholder="Password">-->
                             </div>
 
                             <div class="form-check">
@@ -48,7 +46,7 @@
                             </div>
 
                             <!-- Login Button -->
-                            <div class="form-actions" style="margin-top: 12px;">
+                            <div class="form-actions float-right" style="margin-top: 12px;">
                                 <button type="submit" class="btn btn-success">Log in</button>
                             </div>
                         </fieldset>
