--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,17 +26,27 @@
                                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                                     </div>
                                     <input type="text" class="form-control" id="username" name="username"
-                                       placeholder="Username" aria-describedby="basic-addon1">
+                                       placeholder="Username" aria-describedby="inputGroupPrepend"
+                                           required oninvalid="this.setCustomValidity('Please Enter valid username')"
+                                           oninput="setCustomValidity('')">
+                                    <div class="invalid-feedback">
+                                        Please provide a valid username.
+                                    </div>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <div class="input-group form-group">
+                                <div class="input-group form-group ">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-key"></i></span>
                                     </div>
                                     <input type="password" class="form-control" id="password" name="password"
-                                           placeholder="Password" aria-describedby="basic-addon2" >
+                                           placeholder="Password" aria-describedby="inputGroupPrepend"
+                                           required oninvalid="this.setCustomValidity('Please Enter valid password')"
+                                           oninput="setCustomValidity('')">
+                                    <div class="invalid-feedback">
+                                        Please provide a valid password.
+                                    </div>
                                 </div>
                             </div>
 
