--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,23 +14,16 @@
                 <div class="card-block" style="padding: 24px;">
                     <form name="f" th:action="@{/login}" method="post">
                         <fieldset>
-                            <!-- Thymeleaf + Spring Security error display -->
-                            <div th:if="${param.error}" class="alert alert-danger">
-                                Invalid username and password.
-                            </div>
-
                             <!-- Login Controls -->
                             <div class="form-group">
-                                <div class="input-group form-group">
+                                <div id="usernamegroup" class="input-group form-group ">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text"><i class="fas fa-user"></i></span>
                                     </div>
                                     <input type="text" class="form-control" id="username" name="username"
-                                       placeholder="Username" aria-describedby="inputGroupPrepend"
-                                           required oninvalid="this.setCustomValidity('Please Enter valid username')"
-                                           oninput="setCustomValidity('')">
+                                       placeholder="Username" aria-describedby="inputGroupPrepend" autofocus>
                                     <div class="invalid-feedback">
-                                        Please provide a valid username.
+                                        Provide a valid username
                                     </div>
                                 </div>
                             </div>
@@ -41,23 +34,22 @@
                                         <span class="input-group-text"><i class="fas fa-key"></i></span>
                                     </div>
                                     <input type="password" class="form-control" id="password" name="password"
-                                           placeholder="Password" aria-describedby="inputGroupPrepend"
-                                           required oninvalid="this.setCustomValidity('Please Enter valid password')"
-                                           oninput="setCustomValidity('')">
+                                           placeholder="Password" aria-describedby="inputGroupPrepend" autofocus>
                                     <div class="invalid-feedback">
-                                        Please provide a valid password.
+                                        Provide a valid password
                                     </div>
                                 </div>
                             </div>
 
                             <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="remenber-me" name="remenber-me">
+                                <input type="checkbox" class="form-check-input" id="remenber-me" name="remenber-me" autofocus>
                                 <label class="form-check-label" for="remenber-me">Remember me?</label>
                             </div>
 
                             <!-- Login Button -->
                             <div class="form-actions float-right" style="margin-top: 12px;">
-                                <button type="submit" class="btn btn-success">Log in</button>
+                                <button type="submit" class="btn btn-success"
+                                        autofocus>Log in</button>
                             </div>
                         </fieldset>
                     </form>
@@ -65,5 +57,14 @@
             </div>
         </div>
     </div>
+    <script th:inline="javascript" >
+        var myUsername = document.getElementById("username");
+        var myPossword = document.getElementById("password");
+        var errorValue = /*[[(${error})]]*/ false;
+        if (errorValue) {
+            myUsername.classList.add('is-invalid');
+            myPossword.classList.add('is-invalid');
+        }
+    </script>
 </body>
 </html>
