--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
 <!-- Fragment #2 : Navbar contains nav links -->
 <div th:fragment="nav">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#" th:href="@{~/index}">Catalog Manager</a>
+        <a class="navbar-brand" href="#" th:href="@{/index}">Catalog Manager</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
@@ -36,7 +36,7 @@
                 <button sec:authorize="isAuthenticated()" class="btn btn-outline-danger my-2 my-sm-0 btn-sm" type="submit">Logout <i class="fas fa-sign-out-alt"></i></button>
             </form>
             <form class="form-inline my-2 my-lg-0" form-method="post" th:action="@{/index}">
-                <button sec:authorize="isAnonymous()" href="#" th:href="@{~/index}" class="btn btn-outline-success my-2 my-sm-0 btn-sm" type="submit">Login <i class="fas fa-sign-in-alt"></i></button>
+                <button sec:authorize="isAnonymous()" href="#" th:href="@{/index}" class="btn btn-outline-success my-2 my-sm-0 btn-sm" type="submit">Login <i class="fas fa-sign-in-alt"></i></button>
             </form>
         </div>
     </nav>
